alpm-types/src/relation/snapshots/soname::invalid_sonamev2_parser@case_2.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid sonamev2
 | 
 | lib:libexample.so-abc
 |                  ^ expected end of input.
 | 
 = while parsing:
   alpm-sonamev2: (-abc)
   → invalid sonamev2
   → expected end of input.
